force-app/main/default/objects/Mandatory_Professional_Development__c/Mandatory_Professional_Development__c.object-meta.xml
<CustomObject>
    <label>Mandatory Professional Development</label>
    <nameField>
        <label>Mandatory Professional Development Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mandatory Professional Developments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>