force-app/main/default/objects/Mandatory_Professional_Development__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mandatory Professional Developments</relationshipLabel>
    <relationshipName>Mandatory_Professional_Developments</relationshipName>
    <type>Lookup</type>
</CustomField>