force-app/main/default/objects/Mandatory_Professional_Development__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Position</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Mandatory Professional Developments</relationshipLabel>
    <relationshipName>Position</relationshipName>
    <type>Lookup</type>
</CustomField>