force-app/main/default/objects/Mandatory_Professional_Development__c/fields/Professional_Development__c.field-meta.xml
<CustomField>
    <fullName>Professional_Development__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Professional Development</label>
    <referenceTo>Professional_Development__c</referenceTo>
    <relationshipLabel>Mandatory Professional Development (By Client/Position)</relationshipLabel>
    <relationshipName>Mandatory_Professional_Developments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>