force-app/main/default/objects/Mandatory_Professional_Development__c/validationRules/Both_Position_and_Account_Can_Not_Be_Nul.validationRule-meta.xml
<ValidationRule>
    <fullName>Both_Position_and_Account_Can_Not_Be_Nul</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
         AND( ISBLANK( Account__c ) , ISBLANK( Position__c ) ) ,
          AND(  NOT(ISBLANK(Account__c ) ), NOT( ISBLANK(Position__c ) ) )

   )</errorConditionFormula>
    <errorMessage>Either Position or Account should be filled.</errorMessage>
</ValidationRule>